# unity-native-plugin-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: 1-unity-native-plugin-sys.yml  2-unity-native-plugin.yml  3-unity-native-plugin-vulkan.yml  crates.yml
unity-native-plugin/: Cargo.toml
unity-native-plugin-sample/: Cargo.toml
unity-native-plugin-sample-profiler/: Cargo.toml
unity-native-plugin-sample-profiler/src/: lib.rs
unity-native-plugin-sample/src/: lib.rs
unity-native-plugin-sys/: Cargo.toml  README.md  bindgen.sh  wrapper.hpp
unity-native-plugin-sys/src/: lib.rs  plugin_api.rs
unity-native-plugin-tester/: Cargo.toml  README.md
unity-native-plugin-tester/src/: d3d11.rs  graphics.rs  interface.rs  intreface.rs  lib.rs  window.rs
unity-native-plugin-vulkan/: Cargo.toml  README.md
unity-native-plugin-vulkan/src/: vulkan.rs
unity-native-plugin/src/: bitflag.rs  d3d11.rs  d3d12.rs  enums.rs  graphics.rs  interface.rs  lib.rs  log.rs  memory_manager.rs  profiler.rs  profiler_callbacks.rs  vulkan.rs
