[package]
name = "unity-native-plugin-sample-profiler"
version = "0.8.0"
authors = ["Yasuhiro Taniuchi"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unity-native-plugin = { version = "0.8.0",  path = "../unity-native-plugin", features = ["profiler_callbacks"] }
unity-native-plugin-sys = { version = "0.8.0", path = "../unity-native-plugin-sys" }
log = "0.4"
env_logger = "0.8"
flume = "0.10"
