[package]
name = "unity-native-plugin-sample"
version = "0.4.1"
authors = ["Yasuhiro Taniuchi"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unity-native-plugin = { version = "0.4.1",  path = "../unity-native-plugin", features = ["d3d11", "d3d12", "profiler"] }
unity-native-plugin-vulkan = { version = "0.4.1",  path = "../unity-native-plugin-vulkan" }
winapi = { version = "0.3.9", features = ["winuser", "d3d11", "dxgiformat"] }
wio = "0.2.2"

[dev-dependencies]
unity-native-plugin-tester = { version = "0.4.1",  path = "../unity-native-plugin-tester", features = ["d3d11"] }
