[package]
name = "unity-native-plugin-sys"
version = "0.7.0"
authors = ["Yasuhiro Taniuchi"]
edition = "2024"
license = "MIT"
description = "unity-native-plugin-sys"
homepage = "https://github.com/aosoft/unity-native-plugin-rs"
repository = "https://github.com/aosoft/unity-native-plugin-rs"
readme = "README.md"
categories = ["api-bindings", "game-engines"]
keywords = ["unity", "ffi"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "../LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
