[package]
name = "unity-native-plugin-tester"
version = "0.4.0"
authors = ["Yasuhiro Taniuchi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unity-native-plugin-sys = { version = "0.4.0", path = "../unity-native-plugin-sys" }
unity-native-plugin = { version = "0.4.0",  path = "../unity-native-plugin", features = ["d3d11", "d3d12", "profiler"] }
unity-native-plugin-vulkan = { version = "0.4.0",  path = "../unity-native-plugin-vulkan" }
winit = "0.23.0"
