[package]
name = "unity-native-plugin-tester"
version = "0.4.1"
authors = ["Yasuhiro Taniuchi"]
edition = "2018"
license = "MIT"
description = "Unity Native Plugin API Tester Library"
homepage = "https://github.com/aosoft/unity-native-plugin-rs"
repository = "https://github.com/aosoft/unity-native-plugin-tester"
readme = "README.md"
categories = ["api-bindings", "game-engines"]
keywords = ["unity", "ffi"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "../LICENSE"
]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
d3d11 = []
d3d12 = []

[dependencies]
unity-native-plugin-sys = { version = "0.4.0", path = "../unity-native-plugin-sys" }
unity-native-plugin = { version = "0.4.1",  path = "../unity-native-plugin", features = ["d3d11", "d3d12"] }
winapi = { version = "0.3.9", features = ["winuser", "dxgi", "d3d11", "dxgiformat", "dxgitype", "d3dcommon"] }
winit = "0.23.0"
wio = "0.2.2"
raw-window-handle = "0.3.3"

