[package]
name = "unity-native-plugin-vulkan"
version = "0.8.0"
authors = ["Yasuhiro Taniuchi"]
license = "MIT"
description = "Unity Native Plugin API (Vulkan) for Rust"
homepage = "https://github.com/aosoft/unity-native-plugin-rs"
repository = "https://github.com/aosoft/unity-native-plugin-rs"
readme = "README.md"
categories = ["api-bindings", "game-engines"]
keywords = ["unity"]
edition = "2024"
include = [
    "**/*.rs",
    "Cargo.toml",
    "../LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unity-native-plugin = { version = "0.8.0", path = "../unity-native-plugin" }
unity-native-plugin-sys = { version = "0.8.0", path = "../unity-native-plugin-sys" }
ash = "0.38.0+1.3.281.1"
