[package]
name = "unity-native-plugin"
version = "0.3.0"
authors = ["Yasuhiro Taniuchi"]
license = "MIT"
description = "Unity Native Plugin API for Rust"
homepage = "https://github.com/aosoft/unity-native-plugin-rs"
repository = "https://github.com/aosoft/unity-native-plugin-rs"
readme = "../README.md"
categories = ["api-bindings", "game-engines"]
keywords = ["unity"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "../LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
d3d11 = []
d3d12 = []
vulkan = []

[dependencies]
unity-native-plugin-sys = { version = "0.3.0", path = "../unity-native-plugin-sys" }


